--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="health-bar">
                     <div class="health"
                         :class="{danger: playerHealth < 20}"
-                        :style="{width: playerHealth}">
+                        :style="{width: playerHealth+ '%'}">
                     </div>
                 </div>
                 <div>{{ playerHealth}}%</div>
@@ -24,7 +24,7 @@
                 <div class="health-bar">
                     <div class="health"
                     :class="{danger: monsterHealth < 20}"
-                    :style="{width: monsterHealth}">
+                    :style="{width: monsterHealth + '%'}">
                 </div>
                 </div>
                 <div>{{ monsterHealth}}%</div>
@@ -47,8 +47,14 @@
                 <button @click="running = false" class="btn give-up">Give Up</button>
             </template>
             <button  @click="startGame" v-else class="btn new-game">Start</button>
-        </div>      
-        <div class="panel logs">4</div>
+        </div>
+        <div v-if="logs.length" class="panel logs">
+            <ul>
+                <li v-for="log in logs"
+                    :class="log.cls"
+                    class="log">{{ log.text }}</li>
+            </ul>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
